--- a/docs/doxygen_out/latex/interfacem__display_1_1disp.tex
+++ b/docs/doxygen_out/latex/interfacem__display_1_1disp.tex
@@ -144,26 +144,30 @@ $>$ -\/1, 5 $>$ 5, 10
 
 The length of the string must be at most 9. Default is \textquotesingle{} \textquotesingle{} (character string with two spaces).
 
-S\+T\+Y\+LE = style There are five possible styles\+: \begin{DoxyVerb}      'left'       Title is immediately to the left of the first line of the displayed item.
-      'above'      Title is centered immediately above the item.
-      'pad'        Title is centered above the item, padded with hyphens (-).
-      'underline'  Title is centered above the item, underlined with hyphens.
-      'number'     Each matrix or vector row and / or column is numbered.
+S\+T\+Y\+LE = style There are five possible styles\+: \begin{DoxyVerb}  'left'       Title is immediately to the left of the first line
+               of the displayed item.
+  'above'      Title is centered immediately above the item.
+  'pad'        Title is centered above the item, padded with hyphens (-).
+  'underline'  Title is centered above the item, underlined with hyphens.
+  'number'     Each matrix or vector row and / or column is numbered.
 
-  Any of the four title position styles can also be combined with the number style by
-  specifying for example STYLE = 'pad & number'. Any character except space may be used
-  instead of hyphen by prefixing it to the style. STYLE = '*underline' will thus underline the
-  title with asterisks. Both row and column numbers appear for numbered matrices, but for
-  vectors only row numbers appear (or column numbers when ORIENT is 'col'). The five styles
-  are illustrated below, accompanied by an example of combined padded title and numbering.
+  Any of the four title position styles can also be combined with the
+  number style by specifying for example STYLE = 'pad & number'. Any
+  character except space may be used instead of hyphen by prefixing
+  it to the style. STYLE = '*underline' will thus underline the title
+  with asterisks. Both row and column numbers appear for numbered
+  matrices, but for vectors only row numbers appear (or column numbers
+  when ORIENT is 'col'). The five styles are illustrated below,
+  accompanied by an example of combined padded title and numbering.
 
     > Matr = 1.2   4.2       Matr      ---Matr--       Matr          1     2     ____Matr____
     >        5.6  18.3    1.2   4.2    1.2   4.2    ---------    1  1.2   4.2        1     2
     >                     5.6  18.3    5.6  18.3    1.2   4.2    2  5.6  18.3    1  1.2   4.2
     >                                               5.6  18.3                    2  5.6  18.3
 
-  The default value of STYLE is 'left' if LBOUND is absent, 'number' if it is present, and
-  'left & number' if both TITLE and LBOUND are present.
+  The default value of STYLE is 'left' if LBOUND is absent, 'number'
+  if it is present, and 'left & number' if both TITLE and LBOUND
+  are present.
 \end{DoxyVerb}
 
 
@@ -201,7 +205,8 @@ Z\+E\+R\+O\+AS = zerostring Supported for integer and real X (not complex) Any e
 Notice that when zerostring contains a decimal point it is lined up with other decimal points in the column. If zerostring has length 0, the default behavior of not treating zeros specially is re-\/established, in case an earlier D\+I\+S\+P\+\_\+\+S\+ET call has been used to set Z\+E\+R\+O\+AS.\hypertarget{interfacem__display_1_1disp_autotoc_md9}{}\doxysubsubsection{A\+S\+T\+E\+R\+I\+S\+K\+\_\+\+U\+N\+I\+T A\+N\+D N\+U\+L\+L\+\_\+\+U\+N\+IT}\label{interfacem__display_1_1disp_autotoc_md9}
 As already mentioned in section 3.\+2 there are three special units, A\+S\+T\+E\+R\+I\+S\+K\+\_\+\+U\+N\+IT = -\/3, P\+U\+T\+S\+T\+R\+\_\+\+U\+N\+IT = -\/2 and N\+U\+L\+L\+\_\+\+U\+N\+IT = -\/1. These public named constants (parameters) are defined by M\+\_\+display.
 
-Selecting A\+S\+T\+E\+R\+I\+S\+K\+\_\+\+U\+N\+IT channels all output to the unit that W\+R\+I\+T\+E($\ast$,...) statements use. The I\+S\+O\+\_\+\+F\+O\+R\+T\+R\+A\+N\+\_\+\+E\+NV intrinsic module of Fortran 2003 defines the named constant O\+U\+T\+P\+U\+T\+\_\+\+U\+N\+IT and this may be used instead, unless its value is set to -\/2 by the compiler (which would clash with \hypertarget{interfacem__display_1_1disp_autotoc_md10}{}\doxysubsubsection{P\+U\+T\+S\+T\+R\+\_\+\+U\+N\+I\+T).}\label{interfacem__display_1_1disp_autotoc_md10}
+Selecting A\+S\+T\+E\+R\+I\+S\+K\+\_\+\+U\+N\+IT channels all output to the unit that W\+R\+I\+T\+E($\ast$,...) statements use. The I\+S\+O\+\_\+\+F\+O\+R\+T\+R\+A\+N\+\_\+\+E\+NV intrinsic module of Fortran 2003 defines the named constant O\+U\+T\+P\+U\+T\+\_\+\+U\+N\+IT and this may be used instead, unless its value is set to -\/2 by the compiler (which would clash with P\+U\+T\+S\+T\+R\+\_\+\+U\+N\+IT).
+
 Selecting N\+U\+L\+L\+\_\+\+U\+N\+IT causes all output via D\+I\+SP to be discarded. This feature makes it simple to turn the output on and off, which may be useful for debugging and testing purposes. If U\+N\+IT = U is specified in all D\+I\+S\+P-\/calls, it is enough to change the value of U to -\/1 to turn off output.
 
 P\+U\+T\+S\+T\+R\+\_\+\+U\+N\+IT\+: Output with user written subroutines
@@ -230,18 +235,18 @@ The first of these should output the string S, and the second one should advance
 \end{DoxyVerb}
 
 
-At the beginning of the file \mbox{\hyperlink{M__display_8f90}{M\+\_\+display.\+f90}} there is a slightly longer version which works with both g95 and gfortran. Testing this module is discussed in section 6.\+2 below.\hypertarget{interfacem__display_1_1disp_autotoc_md11}{}\doxysubsubsection{U\+S\+I\+N\+G W=0 E\+D\+I\+T\+I\+NG}\label{interfacem__display_1_1disp_autotoc_md11}
+At the beginning of the file \mbox{\hyperlink{M__display_8f90}{M\+\_\+display.\+f90}} there is a slightly longer version which works with both g95 and gfortran. Testing this module is discussed in section 6.\+2 below.\hypertarget{interfacem__display_1_1disp_autotoc_md10}{}\doxysubsubsection{U\+S\+I\+N\+G W=0 E\+D\+I\+T\+I\+NG}\label{interfacem__display_1_1disp_autotoc_md10}
 The Fortran standard stipulates that writing a single element with I0 editing results in the smallest field width that accommodates the value, and the same applies to B0, O0, Z0 and F0.\+d editing. With D\+I\+SP, the width of a displayed column will be the width of the widest field in the column, and each element is right-\/adjusted in the column. This gives exactly the same output as using T\+R\+IM=\textquotesingle{}yes\textquotesingle{} and a specified field width bigger than the largest occurring. Note that with F0.\+d editing, there is no limit on the width of a column, but with Fw.\+d and T\+R\+IM=\textquotesingle{}yes\textquotesingle{} any element wider than w will be displayed as w asterisks\+: \begin{DoxyVerb}  ------------------F0.2------------------    -----F13.2, TRIM='yes'----
   14.28  142857142857142857142857.14  0.47    14.28  *************  0.47
    1.42                1414213562.37  0.69     1.42  1414213562.37  0.69
 \end{DoxyVerb}
-\hypertarget{interfacem__display_1_1disp_autotoc_md12}{}\doxysubsubsection{N\+O\+T-\/\+A-\/\+N\+U\+M\+B\+E\+R A\+N\+D I\+N\+F\+I\+N\+I\+T\+E V\+A\+L\+U\+ES}\label{interfacem__display_1_1disp_autotoc_md12}
+\hypertarget{interfacem__display_1_1disp_autotoc_md11}{}\doxysubsubsection{N\+O\+T-\/\+A-\/\+N\+U\+M\+B\+E\+R A\+N\+D I\+N\+F\+I\+N\+I\+T\+E V\+A\+L\+U\+ES}\label{interfacem__display_1_1disp_autotoc_md11}
 If the compiler supports not-\/a-\/number and infinite values as defined by the I\+E\+EE exceptional values of Fortran 2003, these are displayed as NaN, +Inf or Inf. A not-\/a-\/number value X is identified as being not equal to itself, and an infinite value is either greater than H\+U\+G\+E(\+X) or smaller than -\/H\+U\+G\+E(\+X). On all the compilers tried the sequence B\+IG=1E20; C\+A\+LL D\+I\+S\+P(\+E\+X\+P(\+B\+I\+G)) displays +Inf, and the program segment\+: \begin{DoxyVerb}> real :: z = 0, big = 1e20
 > call disp([z, z/z, big, -exp(big)])
 \end{DoxyVerb}
 
 
-displays $>$ 0.\+00000E+00 $>$ NaN $>$ 1.\+00000E+20 $>$ -\/Inf\hypertarget{interfacem__display_1_1disp_autotoc_md13}{}\doxysubsubsection{A\+U\+T\+H\+OR}\label{interfacem__display_1_1disp_autotoc_md13}
+displays $>$ 0.\+00000E+00 $>$ NaN $>$ 1.\+00000E+20 $>$ -\/Inf\hypertarget{interfacem__display_1_1disp_autotoc_md12}{}\doxysubsubsection{A\+U\+T\+H\+OR}\label{interfacem__display_1_1disp_autotoc_md12}
 Based on dispmodule(3f), \char`\"{}\+A Fortran 95 module for pretty-\/printing matrices\char`\"{}. Version number 1.\+02 6-\/Sept-\/2008, Kristjan Jonasson, Dept. of Computer Science, University of Iceland (\href{mailto:jonasson@hi.is}{\texttt{ jonasson@hi.\+is}}). 
 
 \doxysubsection{Member Function/\+Subroutine Documentation}
