--- a/docs/doxygen_out/latex/namespacem__display.tex
+++ b/docs/doxygen_out/latex/namespacem__display.tex
@@ -678,23 +678,24 @@ Here is the call graph for this function\+:\nopagebreak
 \doxysubsubsection{\texorpdfstring{disp\_set()}{disp\_set()}}
 {\footnotesize\ttfamily subroutine, public \mbox{\hyperlink{interfacem__display_1_1disp__set}{m\+\_\+display\+::disp\+\_\+set}} (\begin{DoxyParamCaption}\item[{character($\ast$), intent(in), optional}]{advance,  }\item[{integer, intent(in), optional}]{digmax,  }\item[{character($\ast$), intent(in), optional}]{matsep,  }\item[{character($\ast$), intent(in), optional}]{orient,  }\item[{character($\ast$), intent(in), optional}]{sep,  }\item[{character($\ast$), intent(in), optional}]{style,  }\item[{integer, intent(in), optional}]{unit,  }\item[{character($\ast$), intent(in), optional}]{zeroas }\end{DoxyParamCaption})}
 
-\hypertarget{namespacem__display_autotoc_md14}{}\doxysubsubsection{N\+A\+ME}\label{namespacem__display_autotoc_md14}
-disp\+\_\+set(3f) -\/ \mbox{[}M\+\_\+display\mbox{]} set default options for disp(3f)\hypertarget{namespacem__display_autotoc_md15}{}\doxysubsubsection{D\+E\+S\+C\+R\+I\+P\+T\+I\+ON}\label{namespacem__display_autotoc_md15}
-The subroutine D\+I\+S\+P\+\_\+\+S\+ET may be used to change default values of all the arguments of D\+I\+SP except T\+I\+T\+LE, X, F\+MT and L\+B\+O\+U\+ND. In addition the default separator between items that are displayed side-\/by-\/side (using A\+D\+V\+A\+N\+CE=\textquotesingle{}no\textquotesingle{}) may be changed with the M\+A\+T\+S\+EP argument.\hypertarget{namespacem__display_autotoc_md16}{}\doxysubsubsection{T\+H\+E D\+E\+R\+I\+V\+E\+D T\+Y\+P\+E D\+I\+S\+P\+\_\+\+S\+E\+T\+T\+I\+N\+GS}\label{namespacem__display_autotoc_md16}
-M\+\_\+display contains the following definition of the data type D\+I\+S\+P\+\_\+\+S\+E\+T\+T\+I\+N\+GS. \begin{DoxyVerb}  type disp_settings
-    character(3)  :: advance   = 'YES'
-    character(9)  :: matsep    = '   '
-    character(3)  :: orient    = 'COL'
-    character(9)  :: sep       = '  '
-    character(19) :: style     = 'LEFT'
-    character(4)  :: trim      = 'AUTO'
-    character(9)  :: zeroas    = ''
-    integer       :: digmax    = 6
-    integer       :: matseplen = 3
-    integer       :: seplen    = 2
-    integer       :: unit      = -3
-    integer       :: zaslen    = 0
-  end type disp_settings
+\hypertarget{namespacem__display_autotoc_md13}{}\doxysubsubsection{N\+A\+ME}\label{namespacem__display_autotoc_md13}
+disp\+\_\+set(3f) -\/ \mbox{[}M\+\_\+display\mbox{]} set default options for disp(3f)\hypertarget{namespacem__display_autotoc_md14}{}\doxysubsubsection{D\+E\+S\+C\+R\+I\+P\+T\+I\+ON}\label{namespacem__display_autotoc_md14}
+The subroutine D\+I\+S\+P\+\_\+\+S\+ET may be used to change default values of all the arguments of D\+I\+SP except T\+I\+T\+LE, X, F\+MT and L\+B\+O\+U\+ND. In addition the default separator between items that are displayed side-\/by-\/side (using A\+D\+V\+A\+N\+CE=\textquotesingle{}no\textquotesingle{}) may be changed with the M\+A\+T\+S\+EP argument.\hypertarget{namespacem__display_autotoc_md15}{}\doxysubsubsection{T\+H\+E D\+E\+R\+I\+V\+E\+D T\+Y\+P\+E D\+I\+S\+P\+\_\+\+S\+E\+T\+T\+I\+N\+GS}\label{namespacem__display_autotoc_md15}
+M\+\_\+display contains the following definition of the data type \hypertarget{namespacem__display_autotoc_md16}{}\doxysubsubsection{D\+I\+S\+P\+\_\+\+S\+E\+T\+T\+I\+N\+G\+S.}\label{namespacem__display_autotoc_md16}
+\begin{DoxyVerb}   type disp_settings
+     character(3)  :: advance   = 'YES'
+     character(9)  :: matsep    = '   '
+     character(3)  :: orient    = 'COL'
+     character(9)  :: sep       = '  '
+     character(19) :: style     = 'LEFT'
+     character(4)  :: trim      = 'AUTO'
+     character(9)  :: zeroas    = ''
+     integer       :: digmax    = 6
+     integer       :: matseplen = 3
+     integer       :: seplen    = 2
+     integer       :: unit      = -3
+     integer       :: zaslen    = 0
+   end type disp_settings
 \end{DoxyVerb}
 
 
@@ -2212,29 +2213,29 @@ I\+F\+MT Character string containing default edit descriptor to use to display i
 T\+R\+I\+MB Controls whether leading and trailing blanks are trimmed from individual displayed elements. Possible values are \textquotesingle{}Y\+ES\textquotesingle{} (to trim blanks) and \textquotesingle{}NO\textquotesingle{} (for no trimming). Default is \textquotesingle{}Y\+ES\textquotesingle{}.
 
 T\+R\+I\+MZ Controls whether trailing zeros are trimmed from the fractional part of displayed items. Possible values are \textquotesingle{}N\+O\+NE\textquotesingle{} (for no zero trimming), \textquotesingle{}G\textquotesingle{} (to trim fractional trailing zeros only when G editing is used), and \textquotesingle{}A\+LL\textquotesingle{} (to trim zeros with all types of editing). Trailing decimal points are also removed when zero-\/trimming is active. Default value is \textquotesingle{}G\textquotesingle{}.\hypertarget{namespacem__display_autotoc_md24}{}\doxysubsubsection{E\+X\+A\+M\+P\+L\+ES}\label{namespacem__display_autotoc_md24}
-When the original (factory) defaults are in effect, the result of invoking T\+O\+S\+T\+R\+I\+NG will usually be as follows. \begin{DoxyVerb}  Invocation                             Returned String
-  ----------                             ---------------
-  tostring(atan(1.0))                    '0.785398'
-  tostring(exp([-3.,-1.,0.,1.]))         '4.97871E-02, 0.36788, 1, 2.7183'
-  tostring(real([(i,i=1,5)])**8)         '1, 256, 6561, 65536, 3.90625E+05'
-  tostring([1.23456,1.2300,1.23456e6])   '1.2346, 1.23, 1.23456E+06'
-  tostring(real([(i,i=1,5)])**8,'f0.1')  '1.0, 256.0, 6561.0, 65536.0, 390625.0'
-  tostring(real([(i,i=1,5)])**8,'f6.1')  '1.0, 256.0, 6561.0, ******, ******'
-  tostring([1200000.,-1.2e-9])           '1.2E+06, -1.2E-09'
-  !
-  tostring(1.200d103)                    '1.2+103'
-  tostring([1.1d0,2.2d10,3.3d20])        '1.1E+00, 2.2E+10, 3.3E+20'
-  !
-  tostring(-77)                          '-77'
-  tostring([(i,i=-3,3)]**11)             '-177147, -2048, -1, 0, 1, 2048, 177147'
-  tostring([(i,i=-3,3)]**11, 'i7')       '-177147, -2048, -1, 0, 1, 2048, 177147'
-  tostring([(i,i=-3,3)]**11, 'i4')       '****, ****, -1, 0, 1, 2048, ****'
-  !
-  tostring((1,3)/(4,2))                  '0.5 + 0.5i'
-  tostring(cmplx([-1,-2])**0.25)       '0.70711 + 0.70711i, 0.8409 + 0.8409i'
-  !
-  tostring([.true., .false., .false.])   'T, F, F'
-  tostring(.true., 'L2')                 'T'
+When the original (factory) defaults are in effect, the result of invoking T\+O\+S\+T\+R\+I\+NG will usually be as follows. \begin{DoxyVerb}Invocation                             Returned String
+----------                             ---------------
+tostring(atan(1.0))                    '0.785398'
+tostring(exp([-3.,-1.,0.,1.]))         '4.97871E-02, 0.36788, 1, 2.7183'
+tostring(real([(i,i=1,5)])**8)         '1, 256, 6561, 65536, 3.90625E+05'
+tostring([1.23456,1.2300,1.23456e6])   '1.2346, 1.23, 1.23456E+06'
+tostring(real([(i,i=1,5)])**8,'f0.1')  '1.0, 256.0, 6561.0, 65536.0, 390625.0'
+tostring(real([(i,i=1,5)])**8,'f6.1')  '1.0, 256.0, 6561.0, ******, ******'
+tostring([1200000.,-1.2e-9])           '1.2E+06, -1.2E-09'
+!
+tostring(1.200d103)                    '1.2+103'
+tostring([1.1d0,2.2d10,3.3d20])        '1.1E+00, 2.2E+10, 3.3E+20'
+!
+tostring(-77)                          '-77'
+tostring([(i,i=-3,3)]**11)             '-177147, -2048, -1, 0, 1, 2048, 177147'
+tostring([(i,i=-3,3)]**11, 'i7')       '-177147, -2048, -1, 0, 1, 2048, 177147'
+tostring([(i,i=-3,3)]**11, 'i4')       '****, ****, -1, 0, 1, 2048, ****'
+!
+tostring((1,3)/(4,2))                  '0.5 + 0.5i'
+tostring(cmplx([-1,-2])**0.25)       '0.70711 + 0.70711i, 0.8409 + 0.8409i'
+!
+tostring([.true., .false., .false.])   'T, F, F'
+tostring(.true., 'L2')                 'T'
 \end{DoxyVerb}
 
 
