--- a/docs/doxygen_out/latex/namespacem__display__util.tex
+++ b/docs/doxygen_out/latex/namespacem__display__util.tex
@@ -93,7 +93,7 @@ type(\mbox{\hyperlink{structm__display__util_1_1boxlist}{boxlist}}), pointer \mb
 
 \doxysubsection{Detailed Description}
 \hypertarget{namespacem__display__util_autotoc_md1}{}\doxysubsubsection{N\+A\+ME}\label{namespacem__display__util_autotoc_md1}
-M\+\_\+display(3f) -\/ \mbox{[}M\+\_\+display\mbox{]} module for pretty-\/printing matrices\hypertarget{namespacem__display__util_autotoc_md2}{}\doxysubsubsection{I\+N\+T\+R\+O\+D\+U\+C\+T\+I\+ON}\label{namespacem__display__util_autotoc_md2}
+M\+\_\+display(3f) -\/ \mbox{[}M\+\_\+display\+::\+I\+N\+T\+RO\mbox{]} module for pretty-\/printing matrices\hypertarget{namespacem__display__util_autotoc_md2}{}\doxysubsubsection{I\+N\+T\+R\+O\+D\+U\+C\+T\+I\+ON}\label{namespacem__display__util_autotoc_md2}
 M\+\_\+display is a standard Fortran 95 module for quick and easy displaying of numbers, vectors or matrices using default or specified format. It can be useful for debugging purposes, for preliminary display of numerical results, and even for final display of such results in cases when carefully formatted tables are not needed. It is comparable to the automatic matrix printing of Matlab, S and R, but offers substantially more control over the format used.
 
 The module can handle the standard Fortran data types integer, single precision, double precision, complex, logical and character. Integer, real, complex and logical data of other than default kind are supported with add-\/on modules. The module contains the following public procedures\+: \begin{DoxyVerb}Subroutine DISP                  The main procedure used for displaying items
