--- a/docs/doxygen_out/latex/M__display_8f90.tex
+++ b/docs/doxygen_out/latex/M__display_8f90.tex
@@ -347,8 +347,7 @@ integer, parameter \mbox{\hyperlink{namespacem__display_a8c6a3df510feabf6bc84dd0
 \doxysubsubsection{\texorpdfstring{trims()}{trims()}}
 {\footnotesize\ttfamily character(len\+\_\+trim(s)) function get\+\_\+se\+::trims (\begin{DoxyParamCaption}\item[{character($\ast$), intent(in)}]{s }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [private]}}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
