--- a/docs/doxygen_out/latex/namespacem__display__util.tex
+++ b/docs/doxygen_out/latex/namespacem__display__util.tex
@@ -214,16 +214,14 @@ Based on dispmodule(3f), \char`\"{}\+A Fortran 95 module for pretty-\/printing m
 
 References defset, disp\+\_\+errmsg(), and getstyles().
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{namespacem__display__util_ad15e85a03cd2a7ef8f405fbb9c1061af_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -240,8 +238,7 @@ Here is the caller graph for this function\+:
 
 References firstboxlist.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -254,8 +251,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{copycolumnnumberstobox()}{copycolumnnumberstobox()}}
 {\footnotesize\ttfamily subroutine m\+\_\+display\+\_\+util\+::copycolumnnumberstobox (\begin{DoxyParamCaption}\item[{character($\ast$), dimension(\+:), intent(in)}]{s,  }\item[{integer, intent(in)}]{wleft,  }\item[{integer, dimension(\+:), intent(in)}]{wid,  }\item[{integer, dimension(\+:), intent(in)}]{widp,  }\item[{integer, intent(in)}]{lsep,  }\item[{character, dimension(\+:,\+:), intent(inout)}]{boxp,  }\item[{integer, intent(inout)}]{lin1 }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [private]}}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -268,8 +264,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{copyseptobox()}{copyseptobox()}}
 {\footnotesize\ttfamily subroutine, public m\+\_\+display\+\_\+util\+::copyseptobox (\begin{DoxyParamCaption}\item[{character($\ast$), intent(in)}]{sep,  }\item[{integer, intent(in)}]{m,  }\item[{integer, intent(in)}]{lin1,  }\item[{character, dimension(\+:,\+:), intent(inout)}]{boxp,  }\item[{integer, intent(inout)}]{wleft }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -282,8 +277,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{copytobox()}{copytobox()}}
 {\footnotesize\ttfamily subroutine, public m\+\_\+display\+\_\+util\+::copytobox (\begin{DoxyParamCaption}\item[{character($\ast$), dimension(\+:), intent(in)}]{s,  }\item[{integer, intent(in)}]{lin1,  }\item[{integer, intent(in)}]{widj,  }\item[{integer, intent(in)}]{widpj,  }\item[{integer, intent(in)}]{nblj,  }\item[{character, dimension(\+:,\+:), intent(inout)}]{boxp,  }\item[{integer, intent(inout)}]{wleft }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -300,16 +294,14 @@ Here is the caller graph for this function\+:
 
 References copytobox(), putstrmodule\+::default\+\_\+unit, dispboxlist(), and newbox().
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{namespacem__display__util_a6bfbf2a614c2b0e059d5399eb8dda479_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -326,16 +318,14 @@ Here is the caller graph for this function\+:
 
 References clearboxlist(), dispnewline(), getboxlist(), putstrmodule\+::putstr(), and tostr().
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{namespacem__display__util_af04928d07a7f716a0098c44bdd7ec3fd_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -352,16 +342,14 @@ Here is the caller graph for this function\+:
 
 References putstrmodule\+::putnl().
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{namespacem__display__util_a0bbd58b5406fa166a20d83f9737c7acd_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -374,8 +362,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{find\_editdesc\_real()}{find\_editdesc\_real()}}
 {\footnotesize\ttfamily subroutine, public m\+\_\+display\+\_\+util\+::find\+\_\+editdesc\+\_\+real (\begin{DoxyParamCaption}\item[{integer, intent(inout)}]{exp,  }\item[{integer, intent(in)}]{expm,  }\item[{integer, intent(in)}]{dmx,  }\item[{character(14), intent(out)}]{edesc,  }\item[{integer, intent(out)}]{flen,  }\item[{integer, intent(out)}]{ndec,  }\item[{logical, intent(in)}]{posit }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -392,16 +379,14 @@ Here is the caller graph for this function\+:
 
 References defset, dispboxlist(), dispnewline(), number\+\_\+cols(), and upper().
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{namespacem__display__util_a056732cc150994b9abe25ed0d72ebee4_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -418,16 +403,14 @@ Here is the caller graph for this function\+:
 
 References defset, disp\+\_\+errmsg(), getstyles(), readfmt(), trims(), and upper().
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{namespacem__display__util_ac6c2d88538e3002af455b4c5aeb46ebf_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -444,8 +427,7 @@ Here is the caller graph for this function\+:
 
 References firstboxlist.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -462,16 +444,14 @@ Here is the caller graph for this function\+:
 
 References upper().
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{namespacem__display__util_a692b7279b1883d8139b60e480aa1e430_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -488,16 +468,14 @@ Here is the caller graph for this function\+:
 
 References getboxlist().
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{namespacem__display__util_a5c3310ac01f093fd857b2a3aa3189e02_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -516,8 +494,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{number\_cols()}{number\_cols()}}
 {\footnotesize\ttfamily logical function m\+\_\+display\+\_\+util\+::number\+\_\+cols (\begin{DoxyParamCaption}\item[{type(\mbox{\hyperlink{structm__display__util_1_1settings}{settings}}), intent(in)}]{SE }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [private]}}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -530,8 +507,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{number\_rows()}{number\_rows()}}
 {\footnotesize\ttfamily logical function m\+\_\+display\+\_\+util\+::number\+\_\+rows (\begin{DoxyParamCaption}\item[{type(\mbox{\hyperlink{structm__display__util_1_1settings}{settings}}), intent(in)}]{SE }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [private]}}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -548,16 +524,14 @@ Here is the caller graph for this function\+:
 
 References copycolumnnumberstobox(), copyseptobox(), copytobox(), newbox(), number\+\_\+cols(), number\+\_\+rows(), replace\+\_\+w(), and upper().
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{namespacem__display__util_a70f3818ca97ec91537e81b9f9b10953c_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -574,16 +548,14 @@ Here is the caller graph for this function\+:
 
 References sszipfmt(), and upper().
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{namespacem__display__util_a73ae4e30d2dcf1f608ac24bf1623ee6c_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -596,8 +568,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{replace\_w()}{replace\_w()}}
 {\footnotesize\ttfamily pure subroutine, public m\+\_\+display\+\_\+util\+::replace\+\_\+w (\begin{DoxyParamCaption}\item[{character($\ast$), intent(inout)}]{fmt,  }\item[{integer, intent(in)}]{wnew }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -610,8 +581,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{replace\_zeronaninf()}{replace\_zeronaninf()}}
 {\footnotesize\ttfamily subroutine, public m\+\_\+display\+\_\+util\+::replace\+\_\+zeronaninf (\begin{DoxyParamCaption}\item[{character($\ast$), dimension(\+:), intent(inout)}]{s,  }\item[{character($\ast$), intent(in)}]{zas,  }\item[{logical, dimension(\+:), intent(in)}]{maskz,  }\item[{logical, dimension(\+:), intent(in), optional}]{masknan,  }\item[{logical, dimension(\+:), intent(in), optional}]{maskminf,  }\item[{logical, dimension(\+:), intent(in), optional}]{maskinf }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -624,8 +594,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{sszipfmt()}{sszipfmt()}}
 {\footnotesize\ttfamily pure subroutine m\+\_\+display\+\_\+util\+::sszipfmt (\begin{DoxyParamCaption}\item[{character($\ast$), intent(in)}]{fmt,  }\item[{character($\ast$), intent(out)}]{fmt1 }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [private]}}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -638,8 +607,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{tostr()}{tostr()}}
 {\footnotesize\ttfamily character(size(a)) function m\+\_\+display\+\_\+util\+::tostr (\begin{DoxyParamCaption}\item[{character, dimension(\+:), intent(in)}]{a }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [private]}}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -656,16 +624,14 @@ Here is the caller graph for this function\+:
 
 References disp\+\_\+errmsg(), readfmt(), tosfac, and tosset.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{namespacem__display__util_a76361afb9f9c3952c258f1f8053ec62a_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -682,8 +648,7 @@ Here is the caller graph for this function\+:
 
 References tosset.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -700,8 +665,7 @@ Here is the caller graph for this function\+:
 
 References tosset.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -718,16 +682,14 @@ Here is the caller graph for this function\+:
 
 References tosset, and trim\+\_\+s\+\_\+real().
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{namespacem__display__util_ac428024047b90a34278426d21759faa0_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -744,8 +706,7 @@ Here is the caller graph for this function\+:
 
 References tosset.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -758,8 +719,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{upper()}{upper()}}
 {\footnotesize\ttfamily pure character(len(s)) function, public m\+\_\+display\+\_\+util\+::upper (\begin{DoxyParamCaption}\item[{character($\ast$), intent(in)}]{s }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
