--- a/docs/doxygen_out/latex/namespaceputstrmodule.tex
+++ b/docs/doxygen_out/latex/namespaceputstrmodule.tex
@@ -34,8 +34,7 @@ Based on dispmodule(3f), \char`\"{}\+A Fortran 95 module for pretty-\/printing m
 \doxysubsubsection{\texorpdfstring{putnl()}{putnl()}}
 {\footnotesize\ttfamily subroutine putstrmodule\+::putnl}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -48,8 +47,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{putstr()}{putstr()}}
 {\footnotesize\ttfamily subroutine putstrmodule\+::putstr (\begin{DoxyParamCaption}\item[{character($\ast$), intent(in)}]{s }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
