--- a/docs/doxygen_out/latex/structm__display__util_1_1boxlist.tex
+++ b/docs/doxygen_out/latex/structm__display__util_1_1boxlist.tex
@@ -2,8 +2,7 @@
 \label{structm__display__util_1_1boxlist}\index{m\_display\_util::boxlist@{m\_display\_util::boxlist}}
 
 
-Collaboration diagram for m\+\_\+display\+\_\+util\+::boxlist\+:
-\nopagebreak
+Collaboration diagram for m\+\_\+display\+\_\+util\+::boxlist\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
