--- a/docs/doxygen_out/latex/structm__display__util_1_1boxnode.tex
+++ b/docs/doxygen_out/latex/structm__display__util_1_1boxnode.tex
@@ -2,8 +2,7 @@
 \label{structm__display__util_1_1boxnode}\index{m\_display\_util::boxnode@{m\_display\_util::boxnode}}
 
 
-Collaboration diagram for m\+\_\+display\+\_\+util\+::boxnode\+:
-\nopagebreak
+Collaboration diagram for m\+\_\+display\+\_\+util\+::boxnode\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
